# fi-code

./: .gitignore  Cargo.toml  DESIGN.md  README.es.md  README.pt.md  README.zh_TW.md  fi-code-server.pid  permission_test.md  test.env
crates/cli/: Cargo.toml
crates/cli/src/: cli_args.rs  entry.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: entry.rs  lib.rs
crates/core/src/agent/: agent.rs  compression.rs  mod.rs  profile.rs  prompt.rs  prompt_template.md  runner.rs
crates/core/src/commands/: mod.rs  registry.rs  slash.rs
crates/core/src/config/: config.rs  mod.rs  models.rs  presets.rs
crates/core/src/i18n/: mod.rs
crates/core/src/i18n/locales/: en.toml  zh.toml
crates/core/src/mcp/: client.rs  manager.rs  mod.rs  transport.rs  types.rs
crates/core/src/observability/: attrs.rs  config.rs  facade.rs  mod.rs  resend.rs  tracer.rs
crates/core/src/observability/exporter/: local_jsonl.rs  mod.rs  otlp_http.rs
crates/core/src/permission/: mod.rs  permission.rs
crates/core/src/provider/: base_client.rs  mock_client.rs  mod.rs  provider.rs
crates/core/src/provider/client/: anthropic_client.rs  mod.rs  openapi_client.rs
crates/core/src/server/: commands.rs  mod.rs  models.rs  server.rs  session.rs
crates/core/src/server/api/: chat_api.rs  file_api.rs  log_api.rs  mod.rs  permission_api.rs  session_api.rs
crates/core/src/server/transport/: mod.rs  rpc.rs  sse.rs
crates/core/src/session/: message.rs  mod.rs  session.rs
crates/core/src/skills/: loader.rs  mod.rs  registry.rs  scanner.rs  skill_type.rs
crates/core/src/tools/: basic_tools.rs  mod.rs  tools_registry.rs  tools_type.rs  windows_compat.rs
crates/core/src/tools/task/: manager.rs  mod.rs  tool.rs
crates/core/src/tui/: app.rs  client.rs  event.rs  layout.rs  mod.rs  theme.rs
crates/core/src/tui/components/: card_widget.rs  chat.rs  input.rs  left_drawer.rs  log_window.rs  mod.rs  question_dialog.rs  right_drawer.rs  status_bar.rs
crates/core/src/utils/: cli.rs  file_type.rs  log.rs  log_store.rs  mod.rs  workspace.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: constants.rs  dto.rs  enums.rs  lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  client.rs  lib.rs  main.rs
crates/tui/src/components/: card_widget.rs  chat.rs  input.rs  left_drawer.rs  log_window.rs  mod.rs  question_dialog.rs  right_drawer.rs  status_bar.rs
crates/tui/src/components/part_renderer/: code_block.rs  image.rs  mod.rs  tool_call.rs  tool_error.rs  tool_result.rs  usage.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
desktop/src-tauri/: tauri.conf.json
desktop/src-tauri/src/: lib.rs  sidecar.rs
docs/buglist/: buglist-2026-05-15.md  buglist-2026-05-17.md  buglist-2026-05-21.md  buglist-2026-05-27.md
docs/refactor/: refactor-2026-05-14-prompt-template.md  refactor-2026-05-25.md
docs/superpowers/plans/: 2026-04-16-debug-logging-plan.md  2026-04-17-agent-skills.md  2026-05-06-skill-slash-command.md  2026-05-06-tui-slash-command-menu.md  2026-05-09-ask-for-question.md  2026-05-09-glob-tool.md  2026-05-15-turn-log.md  2026-05-16-tui-visual-enhance.md  2026-05-18-desktop-tui-alignment.md  2026-05-25-refactor-e2e-to-python.md  2026-05-27-i18n.md  2026-05-27-smart-grep.md
docs/superpowers/specs/: 2026-04-16-debug-logging-design.md  2026-04-24-agent-slash-commands-design.md  2026-04-24-tui-design.md  2026-05-06-skill-slash-command-design.md  2026-05-06-tui-slash-command-menu-design.md  2026-05-06-tui-theme-command-design.md  2026-05-09-ask-for-question-design.md  2026-05-09-glob-tool-design.md  2026-05-09-tui-statusbar-redesign.md  2026-05-15-turn-log-design.md  2026-05-16-tui-visual-enhance-design.md  2026-05-18-agent-system-design.md  2026-05-18-slash-command-menu-design.md  2026-05-22-langfuse-observability-design.md  2026-05-25-refactor-e2e-to-python-design.md  2026-05-27-markdown-rendering-design.md  2026-05-27-smart-grep-design.md  2026-05-28-frontend-performance-fix.md  2026-05-28-read-glob-grep-gitignore.md  2026-05-29-settings-dialog-design.md  2026-05-29-skill-directories-config-design.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ApiKeyDialog.tsx  ChatPanel.tsx  ConnectionScreen.tsx  Header.tsx  HistoryDrawer.tsx  InputBox.tsx  LogPanel.tsx  MessageBubble.tsx  ModelDropdown.tsx  Sidebar.tsx
frontend/src/hooks/: useChatStream.ts  useClient.ts  useSidecar.ts  (+1 more)
src/: entry.rs  main.rs  message.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/agent/: agent.rs  mod.rs  prompt.rs  runner.rs
src/commands/: slash.rs
src/mcp/: manager.rs
src/permission/: permission.rs
src/provider/: base_client.rs  provider.rs
src/server/: file_api.rs  mod.rs  server.rs  session.rs
src/session/: mod.rs  session.rs
src/skills/: loader.rs  registry.rs
src/task/: manager.rs  mod.rs
src/tools/: basic_tools.rs  mod.rs  windows_compat.rs
src/tui/: app.rs  client.rs  event.rs  layout.rs  mod.rs  ui.rs
src/utils/: cli.rs  log.rs  mod.rs  workspace.rs
tests/: Cargo.toml  bdd_test.rs  lib.rs
tests/bdd/: mod.rs
tests/bdd/features/: agent_skills.feature  agent_tools.feature  agent_tools_extended.feature  log_window.feature  slash_commands.feature  streaming_output.feature  task_splitting.feature
tests/bdd/steps/: agent_skills.rs  agent_tools.rs  agent_tools_extended.rs  common.rs  log_window.rs  mod.rs  slash_commands.rs  streaming.rs  task_splitting.rs
tests/e2e/: cli_e2e.rs  conftest.py  run_e2e.rs  tui_e2e.rs  tui_flow_e2e.rs
tests/e2e-web/python/: test_web_observability.py
tests/e2e/cli/: test_cli_help.py  test_cli_models.py  test_cli_server.py  test_cli_session.py  test_cli_single_command.py  test_cli_version.py  test_cli_web_flag.py
tests/e2e/common/: __init__.py  constants.py  fixtures.py  mock_ai.py  mock_langfuse.py  pexpect_utils.py  project.py  server.py  subprocess_utils.py  vite_server.py
(+66 files in other folders)
