[package]
name = "ficode"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "blocking", "stream"] }
html2md = "0.2.15"
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dotenvy = "0.15"
colored = "3.1.1"
rustyline = "18.0.0"
anyhow = "1.0"
async-trait = "0.1.89"
futures = "0.3"
bytes = "1"
rand = "0.8"
ulid = "1.1"
directories = "5.0"
dirs = "5.0"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "8"
ratatui = "0.28"
crossterm = "0.28"
jsonc-parser = { version = "0.32", features = ["serde"] }
axum = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.5", features = ["cors"] }
walkdir = "2.5"
unicode-width = "0.2"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3.10"
