[workspace]
members = [
    "crates/core",
    "crates/shared",
    "crates/utils",
    "crates/cli",
    "crates/tui",
    "crates/server",
    "src-tauri",
    "tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "blocking", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1.89"
futures = "0.3"
