[package]
name = "fi-code-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "fi_code_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time", "rt-multi-thread"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
fi-code-core = { path = "../crates/core" }
