[package]
name = "fi-code-tests"
version = "0.1.0"
edition = "2021"

[lib]
name = "fi_code_tests"
path = "lib.rs"

[[test]]
name = "e2e_cli"
path = "e2e/cli_e2e.rs"

[[test]]
name = "e2e_tui"
path = "e2e/tui_e2e.rs"



[[test]]
name = "tui_flow_e2e"
path = "e2e/tui_flow_e2e.rs"

[[test]]
name = "bdd"
path = "bdd_test.rs"
harness = false

[dependencies]
fi-code-utils = { path = "../crates/utils" }
fi-code-core = { path = "../crates/core" }
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1.15" }
anyhow = "1.0"
serde_json = "1.0"
reqwest = { version = "0.13.2", features = ["json"] }
cucumber = "0.23"
futures = "0.3"
