[package]
name = "fi-code-tests"
version = "0.1.0"
edition = "2021"

[lib]
name = "fi_code_tests"
path = "lib.rs"

# ============================================
# E2E 测试 - Python 桥接
# ============================================

[[test]]
name = "e2e_all"
path = "e2e/run_e2e.rs"

# ============================================
# BDD 测试
# ============================================

[[test]]
name = "bdd"
path = "bdd_test.rs"
harness = false

[dependencies]
fi-code-utils = { path = "../crates/utils" }
fi-code-core = { path = "../crates/core" }
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1.15" }
anyhow = "1.0"
serde_json = "1.0"
reqwest = { version = "0.13.2", features = ["json"] }
cucumber = "0.23"
futures = "0.3"
