[package]
name = "fi-code-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fi-code-cli"
path = "src/main.rs"

[dependencies]
fi-code-core = { path = "../core" }
fi-code-tui = { path = "../tui" }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
colored = "3.1.1"
directories = "5.0"
dirs = "5.0"
open = "5"
