[package]
name = "fi-code-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fi-code-tui"
path = "src/main.rs"

[dependencies]
fi-code-core = { path = "../core" }
fi-code-shared = { path = "../shared" }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
reqwest = { version = "0.13.2", features = ["json", "blocking", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
unicode-width = "0.2.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
